--- a/WindowsFormsApp1/packages.config
+++ b/WindowsFormsApp1/packages.config
@@ -3,8 +3,8 @@
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
   <package id="Common.Logging" version="2.1.1" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
-  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net472" />
-  <package id="HtmlRenderer.PdfSharp" version="1.5.0.6" targetFramework="net472" />
+  <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net472" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
@@ -12,9 +12,7 @@
   <package id="Magick.NET-Q16-AnyCPU" version="7.20.0.1" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.20" targetFramework="net472" />
-  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net472" />
-  <package id="Pechkin" version="0.5.8.1" targetFramework="net472" />
-  <package id="Pechkin.Synchronized" version="0.5.8.1" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
