generowanie CSV z datagrid, funkcja generowanie excel z datagrid

--- a/WindowsFormsApp1/packages.config
+++ b/WindowsFormsApp1/packages.config
@@ -11,6 +11,7 @@
   <package id="Magick.NET.Core" version="3.0.0" targetFramework="net472" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.20.0.1" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.21" targetFramework="net472" />
   <package id="MySqlBackup.NET" version="2.3.3.1" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net472" />
